--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ COPY ./requirements.txt /root
 RUN pip install --upgrade pip setuptools wheel
 
 RUN cd /root \
-    && pip install -r mm_requirements.txt --verbose \
+    && pip install -r requirements.txt --verbose \
     && pip install --no-deps imgaug==0.4.0
 
 RUN rm /etc/apt/sources.list.d/cuda.list \
